--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="script.js" defer></script>
   </head>
   <body>
-    <form id="myForm" onsubmit="time()">
+    <form id="myForm" oninput="time()">
       <label for="fname">First name:</label><br>
       <input type="text" id="fname" name="fname" value=""><br>
       <label for="lname">Last name:</label><br>
